--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^0.18.0",
     "element-ui": "^1.3.7",
     "vue": "^2.3.3",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
