--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "element-ui": "^1.3.7",
     "vue": "^2.3.3",
+    "vue-resource": "^1.5.1",
     "vue-router": "^2.7.0",
     "vuex": "^3.0.1"
   },
